# COIL

./: .gitignore  CEL-GRAMMAR.md  CONTRIBUTING.md  GLOSSARY.md  README.md  ROADMAP.md  VERSION.md  abi.md  arch.md  assembler-impl.md  cof.md  coil-spec.md  coil_assemblers.md  conf.md  config.md  config_format.md  core.md  cross.md  crossarch.md  debugging.md  design.md  directives.md  encode.md  err.md  example.md  execution_model.md  format.md  guide.md  hoil-spec.md  hoil.md  impl.md  implementation_guide.md  instruction_set.md  isa.md  memory_model.md  meson.build  object_format.md  objects.md  optim.md  optimization.md  (+14 more)
COIL/: coil.h  err.h  token.h
coil/: OVERVIEW.md  abi.md  conf.md  dir.md  isa.md  isadirint.md  obj.md  reg.md  std.md  type.md
coil/example/: conf.cconf  example.cel.md
docs/: README.md  assembler-impl.md  intro.md  structure.txt
docs/HOIL/: README.md
docs/assembler-guide/: README.md  target-configuration.md
docs/compiler-guide/: README.md  type-mapping.md
docs/core/: README.md  config_format.md  instruction_set.md  memory_model.md  processing_units.md  serialization_format.md  type_system.md
docs/core-spec/: README.md
docs/examples/: bootloader.md  nn.md
docs/hoil/: README.md
docs/intro/: README.md  architecture.md
docs/runtime/: README.md  execution_model.md
docs/runtime-spec/: README.md
examples/: bare-metal.md  cross-device.md  standard-usage.md
include/COIL/: err.h  format.h  writer.h
src/coil_assembler/: binary_parser.c  binary_parser.h  coil_assembler.c  instruction_decoder.c  instruction_decoder.h  optimizer.c  optimizer.h  target.c  target.h  translator.c  translator.h
src/common/: error.c  error.h  instruction.c  instruction.h  module.c  module.h  type_system.c  type_system.h
src/hoil_compiler/: hoil_compiler.c  hoil_compiler.h  lexer.c  lexer.h  parser.c  parser.h  semantic.c  semantic.h
src/tools/: hoilc.c
tools/: README.md  config.h  config_gen1.c  isa.h
